# AdventOfCode2024

./: .gitignore
Day_01/: CMakeLists.txt  Day_01.cpp
Day_02/: CMakeLists.txt  Day_02.cpp
Day_02/Day_02/: Day_02.cpp
Day_03/: CMakeLists.txt  Day_03.cpp
Day_04/: CMakeLists.txt  Day_04.cpp  LetterBoard.cpp  LetterBoard.hpp
Day_05/: CMakeLists.txt  Day_05.cpp  PageRules.cpp  PageRules.hpp  Pages.cpp  Pages.hpp
Day_06/: CMakeLists.txt  Day_06.cpp
Day_07/: BenchmarkResult.txt  CMakeLists.txt  Day_07.cpp  unreadableOptimisations.cpp  unreadableOptimisations.hpp
Day_08/: CMakeLists.txt  Day_08.cpp
Day_09/: CMakeLists.txt  Day_09.cpp
Day_10/: CMakeLists.txt  Day_10.cpp
Day_11/: CMakeLists.txt  Day_11.cpp
Day_12/: CMakeLists.txt  Day_12.cpp
Day_13/: .Day_13.cpp.swp  CMakeLists.txt  Day_13  Day_13.cpp
Day_14/: CMakeLists.txt  Day_14  Day_14.cpp
Day_15/: CMakeLists.txt  Day_15.cpp
Day_16/: CMakeLists.txt  Day_16.cpp
Day_17/: CMakeLists.txt  Day_17.cpp  p2.txt
Day_18/: CMakeLists.txt  Day_18.cpp
Day_19/: CMakeLists.txt  Day_19.cpp
Day_20/: CMakeLists.txt  Day_20.cpp
Day_22/: CMakeLists.txt  Day_22.cpp
Day_23/: CMakeLists.txt  Day_23.cpp
Day_25/: CMakeLists.txt  Day_25.cpp
utils/: utils.cpp  utils.hpp
